added README file

--- a/README
+++ b/README
@@ -1,8 +1,9 @@
 see code sources for licences, and more info.
 
-It works for me, I mean it will work with a MacOSX installation, but need pathes tweaking to work on other environments.
-It needs an Arduino IDE install, but does not executes it.
+Works on OSX and Linux.
 
-don't hesitate to fork it with updated linux pathes.
+Edit the makefile to change to your pathes, and update the libraries you need.
+Use make list to know supported targets.
 
-I plan on rewriting a Makefile using CMake, so it will not need manual declaration of ".cpp" files for each library you need and it won't have awful sed pipes inside.
+Fork it, improve it, reuse it, pay me a beer ! ;)
+
